[CFE-20096] Fix <LoadingOverlay /> overflow prop. (#40)
* [CFE-20096] Fix <LoadingOverlay /> overflow prop.

* [CFE-20096] Maintain border-radius on loading content overlay.

--- a/packages/travix-ui-kit/components/loadingOverlay/loadingOverlay.css
+++ b/packages/travix-ui-kit/components/loadingOverlay/loadingOverlay.css
@@ -1,8 +1,6 @@
 @value messageMargin: 8px;
 
 .ui-loading-overlay {
-  border-radius: 8px;
-  overflow: hidden;
   position: relative;
 }
 
@@ -58,6 +56,7 @@
 .ui-loading-overlay_loading .ui-loading-overlay__content:before {
   background: var(--tx-generic-color-secondary-light);
   bottom: 0;
+  border-radius: 8px;
   content: "";
   left: 0;
   position: absolute;
